// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrideWebpackConfig getOutputPath 1`] = `"D:/app/build"`;

exports[`overrideWebpackConfig with build script 1`] = `
Object {
  "entry": Array [
    "index.js",
  ],
  "externals": Object {},
  "output": Object {
    "path": "D:/app/build",
  },
  "resolve": Object {
    "plugins": Array [],
  },
}
`;

exports[`overrideWebpackConfig with build:development script 1`] = `
Object {
  "devtool": "eval-source-map",
  "entry": Array [
    "index.js",
  ],
  "externals": Object {},
  "mode": "development",
  "output": Object {
    "path": "D:/app/build",
  },
  "resolve": Object {
    "plugins": Array [],
  },
}
`;

exports[`overrideWebpackConfig with build:package script 1`] = `
Object {
  "entry": Array [
    "index.js",
  ],
  "externals": Object {
    "react": "react",
    "react-dom": "react-dom",
    "styled-components": "styled-components",
  },
  "output": Object {
    "library": "react-core",
    "libraryTarget": "umd",
    "path": "D:/app/build",
  },
  "resolve": Object {
    "plugins": Array [],
  },
}
`;

exports[`overrideWebpackConfig with build:package:development script 1`] = `
Object {
  "devtool": "eval-source-map",
  "entry": Array [
    "index.js",
  ],
  "externals": Object {
    "react": "react",
    "react-dom": "react-dom",
    "styled-components": "styled-components",
  },
  "mode": "development",
  "output": Object {
    "library": "react-core",
    "libraryTarget": "umd",
    "path": "D:/app/build",
  },
  "resolve": Object {
    "plugins": Array [],
  },
}
`;
